Update text and styles (largely to fix overflow scroll)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,25 @@
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  font-size: 16px;
+  background: linear-gradient(134deg, #9ddef2, #16dcc3, #ffffff);
+  background-size: 180% 180%;
+  animation: gradient-animation 15s ease infinite;
+}
+
 p {
   font-size: 20px;
 }
 
 .wrapper {
-  height: 100vh;
-  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: auto 0;
+  padding: 0 24px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
@@ -20,9 +31,9 @@ p {
   animation-iteration-count: infinite;
   transform-origin: 70% 70%;
   display: inline-block;
+  font-size: 46px;
 }
 
-/* via Jake Jarvis, https://jarv.is/notes/css-waving-hand-emoji/ */
 @keyframes wave {
   0% {
     transform: rotate(0deg);
@@ -47,5 +58,17 @@ p {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
